corrected social media wording overflow in mobile. fixed #73

--- a/public/css/foundation/layout.sass
+++ b/public/css/foundation/layout.sass
@@ -43,7 +43,7 @@ footer
 	background-color: lighten($yellow, 10%)
 	display: block
 	padding: 15px 0
-	margin: 2rem 0
+	margin: 1rem 0
 	p
 		color: $blue
 		text-align: center
