--- a/public/css/foundation/responsive.sass
+++ b/public/css/foundation/responsive.sass
@@ -42,6 +42,8 @@
   .helptext
     top: -8px
     right: 120px
+  .social li p
+    display: none
 
 @media only screen and (max-width: 380px)
   h1
