--- a/public/css/pages/home.sass
+++ b/public/css/pages/home.sass
@@ -84,7 +84,7 @@
   font-family: 'Social'
   font-size: 3rem
   font-size: 4vw
-  margin: 0 auto
+  margin: 0 auto 1rem
   padding: 0 calc(50% - 52%/2)
   li
     width: 22%
